tests/ui/delegation/empty-glob.stderr
error: empty glob delegation is not supported
  --> $DIR/empty-glob.rs:7:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

